github link update

--- a/notebook/Duration-predication.ipynb
+++ b/notebook/Duration-predication.ipynb
@@ -501,6 +501,21 @@
    "id": "945f9892",
    "metadata": {},
    "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "8e1659cc",
+   "metadata": {},
+   "source": [
+    "# github link: https://github.com/Avyukth/mlops-dtc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d7b68e31",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
