--- a/notebook/Duration-predication.ipynb
+++ b/notebook/Duration-predication.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 65,
    "id": "6e400f6b",
    "metadata": {},
    "outputs": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 66,
    "id": "56c16fd7",
    "metadata": {},
    "outputs": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 68,
    "id": "0aa8f22b",
    "metadata": {},
    "outputs": [],
@@ -60,18 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "9155253a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_train = read_dataframe('../data/yellow_tripdata_2022-02.parquet')\n",
-    "df_val = read_dataframe('../data/yellow_tripdata_2022-02.parquet')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 69,
    "id": "7a2747d1",
    "metadata": {},
    "outputs": [],
@@ -80,8 +69,8 @@
     "    if filename.endswith('.csv'):\n",
     "        df = pd.read_csv(filename)\n",
     "\n",
-    "        df.lpep_dropoff_datetime = pd.to_datetime(df.lpep_dropoff_datetime)\n",
-    "        df.lpep_pickup_datetime = pd.to_datetime(df.lpep_pickup_datetime)\n",
+    "        df.tpep_dropoff_datetime = pd.to_datetime(df.tpep_dropoff_datetime)\n",
+    "        df.tpep_pickup_datetime = pd.to_datetime(df.tpep_pickup_datetime)\n",
     "    elif filename.endswith('.parquet'):\n",
     "        df = pd.read_parquet(filename)\n",
     "\n",
@@ -119,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 70,
    "id": "640daa25",
    "metadata": {},
    "outputs": [
@@ -129,7 +118,7 @@
        "19"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,12 +147,12 @@
     "\n",
     "What's the standard deviation of the trips duration in January?\n",
     " \n",
-    " # Ans: 46.44530513776499\n"
+    " # Ans: 46.45\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 71,
    "id": "47ed0801",
    "metadata": {},
    "outputs": [
@@ -173,7 +162,7 @@
        "46.44530513776499"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "id": "99784938",
    "metadata": {},
    "outputs": [],
@@ -228,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 73,
    "id": "55d26e00",
    "metadata": {},
    "outputs": [],
@@ -242,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 74,
    "id": "b710d7fa",
    "metadata": {},
    "outputs": [
@@ -252,7 +241,7 @@
        "98.27547930522405"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,17 +279,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 76,
    "id": "6d13162a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(2421440, 515)"
+       "515"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +304,7 @@
     "X_train = dv.fit_transform(train_dicts)\n",
     "\n",
     "\n",
-    "X_train.shape"
+    "X_train.shape[1]"
    ]
   },
   {
@@ -338,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 77,
    "id": "7f187018",
    "metadata": {},
    "outputs": [],
@@ -349,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 78,
    "id": "868aa663",
    "metadata": {},
    "outputs": [
@@ -359,7 +348,7 @@
        "6.986190688113568"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 79,
    "id": "efc2153a",
    "metadata": {},
    "outputs": [
@@ -407,7 +396,7 @@
        "7.786412143012353"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 80,
    "id": "32c53bcb",
    "metadata": {},
    "outputs": [
@@ -443,7 +432,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_11095/1672306066.py:1: UserWarning: \n",
+      "/tmp/ipykernel_11095/437147669.py:1: UserWarning: \n",
       "\n",
       "`distplot` is a deprecated function and will be removed in seaborn v0.14.0.\n",
       "\n",
@@ -454,7 +443,7 @@
       "https://gist.github.com/mwaskom/de44147ed2974457ad6372750bbe5751\n",
       "\n",
       "  sns.distplot(y_pred, label='prediction')\n",
-      "/tmp/ipykernel_11095/1672306066.py:2: UserWarning: \n",
+      "/tmp/ipykernel_11095/437147669.py:2: UserWarning: \n",
       "\n",
       "`distplot` is a deprecated function and will be removed in seaborn v0.14.0.\n",
       "\n",
@@ -470,10 +459,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7efa70051f70>"
+       "<matplotlib.legend.Legend at 0x7efa6ff9d940>"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -512,6 +501,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d7b68e31",
    "metadata": {},
